@@ -1,6 +1,9 @@
+2017-02-18  Markus Gans  <guru.mail@muenster.de>
+	* Allows a window to have more than one FScrollView widget
+
 2017-02-07  Markus Gans  <guru.mail@muenster.de>
-	* Uses termcap capability U8 to identify terminals that can't display 
-	  vt100 line-drawing in UTF-8 mode
+	* Uses termcap capability U8 to identify terminals that 
+	  can't display vt100 line-drawing in UTF-8 mode
 
 2017-01-28  Markus Gans  <guru.mail@muenster.de>
 	* Allow to change the focus out from FScrollView to another widget
